# scorep_binding_python

./: MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: publish.yml  unit_tests.yml
scorep/: __main__.py  _version.py  helper.py
src/scorepy/: cInstrumenter.cpp  pythonHelpers.cpp
test/: test_scorep.py
